fixing some layout issues and cleanup of attributes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,28 +2,28 @@
 
 <h2>Line chart</h2>
 <highcharts #myID1 [labels]="labels" [config]="global_configuration">
-  <highcharts-data label="4" [data]="dataSet1" type="line" backgroundColor="transparent" fill="0"></highcharts-data>
-  <highcharts-data label="1" [data]="dataSet2" type="line" backgroundColor="transparent" fill="0"></highcharts-data>
-  <highcharts-data label="2" [data]="dataSet3" type="line" backgroundColor="transparent" fill="0"></highcharts-data>
-  <highcharts-data label="3" [data]="dataSet4" type="line" backgroundColor="transparent" fill="0"></highcharts-data>
+  <highcharts-data label="4" [data]="dataSet1" type="spline" color="#815f86"></highcharts-data>
+  <highcharts-data label="1" [data]="dataSet2" type="spline" color="#fff584"></highcharts-data>
+  <highcharts-data label="2" [data]="dataSet3" type="spline" color="#f59695"></highcharts-data>
+  <highcharts-data label="3" [data]="dataSet4" type="spline" color="rgba(129,95,134,.2)"></highcharts-data>
 </highcharts>
 
 <h2>Bars chart</h2>
 <highcharts #myID2 [labels]="labels" [config]="global_configuration">
-  <highcharts-data label="1" [data]="dataSet1" type="bar" backgroundColor="#fff584"></highcharts-data>
-  <highcharts-data label="2" [data]="dataSet2" type="bar" backgroundColor="#f59695"></highcharts-data>
+  <highcharts-data label="1" [data]="dataSet1" type="column" color="#fff584"></highcharts-data>
+  <highcharts-data label="2" [data]="dataSet2" type="column" color="#f59695"></highcharts-data>
 </highcharts>
 
 <h2>Mixed chart</h2>
 <highcharts #myID3 [labels]="labels" [config]="global_configuration">
   <highcharts-axes>
     <highcharts-xaxis label="bla" id="myXAxis" [visible]="true"></highcharts-xaxis>
-    <highcharts-yaxis label="bla3" id="myYAxis2" [floor]="0" [ceiling]="120" [visible]="true"></highcharts-yaxis>
+    <highcharts-yaxis label="bla3" id="myYAxis1" [visible]="true"></highcharts-yaxis>
   </highcharts-axes>
 
-  <highcharts-data label="4" [data]="dataSet1" type="bar" backgroundColor="#815f86" yAxisId="myYAxis2"></highcharts-data>
-  <highcharts-data label="1" [data]="dataSet2" type="bar" backgroundColor="#fff584" yAxisId="myYAxis2"></highcharts-data>
-  <highcharts-data label="2" [data]="dataSet3" type="bar" backgroundColor="#f59695" yAxisId="myYAxis2"></highcharts-data>
-    <highcharts-data *ngIf="show" label="Gewenst inkomen" [data]="dataSet5" pointRadius="0" borderColor="#815f86" backgroundColor="rgba(129,95,134,.2)" borderWidth="3" type="line" yAxisId="myYAxis"></highcharts-data>
-  <highcharts-data *ngIf="show" label="Inkomen" [data]="dataSet6" pointRadius="0" borderColor="#815f86" backgroundColor="rgba(129,95,134,.2)" borderWidth="3" type="line" yAxisId="myYAxis"></highcharts-data>
+  <highcharts-data label="4" [data]="dataSet1" stack="set1" type="column" color="#815f86"></highcharts-data>
+  <highcharts-data label="1" [data]="dataSet2" stack="set1" type="column" color="#fff584"></highcharts-data>
+  <highcharts-data label="2" [data]="dataSet3" stack="set1" type="column" color="#f59695"></highcharts-data>
+  <highcharts-data *ngIf="show" label="Gewenst inkomen" [data]="dataSet5" pointRadius="0" color="rgba(129,95,134,.2)" borderWidth="3" type="line"></highcharts-data>
+  <highcharts-data *ngIf="show" label="Inkomen" [data]="dataSet6" pointRadius="0" color="rgba(129,95,134,.2)" borderWidth="3" type="line"></highcharts-data>
 </highcharts>
