--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <h2>Line chart</h2>
 
-<highcharts #myID1 [config]="global_configuration" title="spline graph">
+<highcharts #myID1 [config]="global_configuration" titleText="spline graph">
   <highcharts-axes>
     <highcharts-xaxis label="abc" [breakStart]="3" [breakSize]="1" [breakEnd]="6" id="myXAxis" [categories]="labels" [visible]="true"></highcharts-xaxis>
     <highcharts-yaxis label="nummers" id="myYAxis" [visible]="true"></highcharts-yaxis>
@@ -15,10 +15,10 @@
 
 <h2>Bars chart</h2>
 
-<highcharts #myID2 [config]="global_configuration" title="stacked bar">
+<highcharts #myID2 [config]="global_configuration" titleText="stacked bar">
   <highcharts-axes>
-    <highcharts-xaxis label="abc" id="myXAxis" [categories]="labels" [visible]="true"></highcharts-xaxis>
-    <highcharts-yaxis label="nummers" id="myYAxis" [visible]="true"></highcharts-yaxis>
+    <highcharts-xaxis label="abc" id="myXAxis2" [categories]="labels" [visible]="true"></highcharts-xaxis>
+    <highcharts-yaxis label="nummers" id="myYAxis2" [visible]="true"></highcharts-yaxis>
   </highcharts-axes>
   <highcharts-data name="1" stack="set1" [data]="dataSet1" type="column" color="#fff584"></highcharts-data>
   <highcharts-data name="2" stack="set1" [data]="dataSet2" type="column" color="#f59695"></highcharts-data>
@@ -26,10 +26,10 @@
 
 <h2>Mixed chart</h2>
 
-<highcharts #myID3 [config]="global_configuration" title="mixed graph">
+<highcharts #myID3 [config]="global_configuration" titleText="mixed graph">
   <highcharts-axes>
-    <highcharts-xaxis label="bla" id="myXAxis" [categories]="labels" [visible]="true"></highcharts-xaxis>
-    <highcharts-yaxis label="bla3" id="myYAxis1" [visible]="true"></highcharts-yaxis>
+    <highcharts-xaxis label="bla" id="myXAxis3" [categories]="labels" [visible]="true"></highcharts-xaxis>
+    <highcharts-yaxis label="bla3" id="myYAxis3" [visible]="true"></highcharts-yaxis>
   </highcharts-axes>
 
   <highcharts-data name="4" [data]="dataSet1" stack="set1" type="column" color="#815f86"></highcharts-data>
